package pixelempbroidery;

import javafx.application.Application;

public class Launcher {
    public static void main(String[] args) {
        Application.launch(StartApplication.class, args);
    }
}
