package pixelempbroidery;

import javafx.application.Application;
import javafx.fxml.FXMLLoader;
import javafx.scene.Scene;
import javafx.stage.Stage;

import java.io.IOException;

public class StartApplication extends Application {
    @Override
    public void start(Stage stage) throws IOException {
        FXMLLoader fxmlLoader = new FXMLLoader(StartApplication.class.getResource("startBanner.fxml"));
        Scene scene = new Scene(fxmlLoader.load());
        stage.setTitle("Піксельна вишивка. Топчий Віолетта");
        stage.setResizable(false);
        stage.setScene(scene);
        stage.show();
    }
}
